--- a/1_ReadQueryPlanSpark.ipynb
+++ b/1_ReadQueryPlanSpark.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "14gQrY9LrPB6_yq3UPqtbZeBkg5CPAxhP",
-      "authorship_tag": "ABX9TyNVXeZA+UXgiK2YKeXfJXO8",
+      "authorship_tag": "ABX9TyMXVNrrPvkyPIv/RDF68s/a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,12 +566,256 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df_transactions.coalesce(2).explain(True)"
+      ],
       "metadata": {
-        "id": "b0wPM8QZy5Hl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b0wPM8QZy5Hl",
+        "outputId": "e2ac5eb8-22ff-4194-efed-3513d37ff7b9"
       },
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "== Parsed Logical Plan ==\n",
+            "Repartition 2, false\n",
+            "+- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "\n",
+            "== Analyzed Logical Plan ==\n",
+            "cust_id: string, start_date: string, end_date: string, txn_id: string, date: string, year: string, month: string, day: string, expense_type: string, amt: string, city: string\n",
+            "Repartition 2, false\n",
+            "+- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "\n",
+            "== Optimized Logical Plan ==\n",
+            "Repartition 2, false\n",
+            "+- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "\n",
+            "== Physical Plan ==\n",
+            "Coalesce 2\n",
+            "+- *(1) ColumnarToRow\n",
+            "   +- FileScan parquet [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] Batched: true, DataFilters: [], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/content/drive/MyDrive/data/data_skew/transactions.parquet], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<cust_id:string,start_date:string,end_date:string,txn_id:string,date:string,year:string,mon...\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3.join**"
+      ],
+      "metadata": {
+        "id": "1O3tD9zT06gW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_joined = (\n",
+        "    df_transactions.join(\n",
+        "        df_customers,\n",
+        "        how=\"inner\",\n",
+        "        on=\"cust_id\"\n",
+        "    )\n",
+        ")\n",
+        "df_joined.explain(True)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eFSQsKf81CqG",
+        "outputId": "9e19aa5c-b9ec-420b-ad8c-bebb23ef59a5"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "== Parsed Logical Plan ==\n",
+            "'Join UsingJoin(Inner, [cust_id])\n",
+            ":- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "+- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Analyzed Logical Plan ==\n",
+            "cust_id: string, start_date: string, end_date: string, txn_id: string, date: string, year: string, month: string, day: string, expense_type: string, amt: string, city: string, name: string, age: string, gender: string, birthday: string, zip: string, city: string\n",
+            "Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "+- Join Inner, (cust_id#0 = cust_id#68)\n",
+            "   :- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "   +- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Optimized Logical Plan ==\n",
+            "Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "+- Join Inner, (cust_id#0 = cust_id#68)\n",
+            "   :- Filter isnotnull(cust_id#0)\n",
+            "   :  +- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "   +- Filter isnotnull(cust_id#68)\n",
+            "      +- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Physical Plan ==\n",
+            "AdaptiveSparkPlan isFinalPlan=false\n",
+            "+- Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "   +- BroadcastHashJoin [cust_id#0], [cust_id#68], Inner, BuildRight, false\n",
+            "      :- Filter isnotnull(cust_id#0)\n",
+            "      :  +- FileScan parquet [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] Batched: true, DataFilters: [isnotnull(cust_id#0)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/content/drive/MyDrive/data/data_skew/transactions.parquet], PartitionFilters: [], PushedFilters: [IsNotNull(cust_id)], ReadSchema: struct<cust_id:string,start_date:string,end_date:string,txn_id:string,date:string,year:string,mon...\n",
+            "      +- BroadcastExchange HashedRelationBroadcastMode(List(input[0, string, false]),false), [plan_id=163]\n",
+            "         +- Filter isnotnull(cust_id#68)\n",
+            "            +- FileScan parquet [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] Batched: true, DataFilters: [isnotnull(cust_id#68)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/content/drive/MyDrive/data/data_skew/customers.parquet], PartitionFilters: [], PushedFilters: [IsNotNull(cust_id)], ReadSchema: struct<cust_id:string,name:string,age:string,gender:string,birthday:string,zip:string,city:string>\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This Spark physical plan describes an inner join between two Parquet files: transactions.parquet and customers.parquet, using the cust_id column.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   FileScan parquet: Both files are scanned, with a filter to ensure cust_id is not null.\n",
+        "*   BroadcastExchange: The smaller customers dataset is broadcasted to all worker nodes for efficient joining.\n",
+        "*   BroadcastHashJoin: Performs an inner join on cust_id, using the broadcasted customers data.\n",
+        "*  Project: Selects columns from both datasets, including transaction details (start_date, txn_id, amt, etc.) and customer details (name, age, gender, etc.).\n",
+        "\n",
+        "\n",
+        "This plan is efficient for joining a large dataset (transactions) with a smaller one (customers) by broadcasting the smaller table, reducing shuffle and improving performance.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gBRgoBvB1XcW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_joined.rdd.getNumPartitions()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QpcKe-SD1cYP",
+        "outputId": "c1b16a1a-1301-42da-fb97-883f3688f770"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", -1) #disable broadcast join"
+      ],
+      "metadata": {
+        "id": "_07cJsUO29rp"
+      },
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_joined_broad = (\n",
+        "    df_transactions.join(\n",
+        "        df_customers,\n",
+        "        how=\"inner\",\n",
+        "        on=\"cust_id\"\n",
+        "    )\n",
+        ")\n",
+        "df_joined_broad.explain(True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MJNE1H3I3F9g",
+        "outputId": "f4b198f5-b26d-4386-e340-4cd31ee52a70"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "== Parsed Logical Plan ==\n",
+            "'Join UsingJoin(Inner, [cust_id])\n",
+            ":- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "+- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Analyzed Logical Plan ==\n",
+            "cust_id: string, start_date: string, end_date: string, txn_id: string, date: string, year: string, month: string, day: string, expense_type: string, amt: string, city: string, name: string, age: string, gender: string, birthday: string, zip: string, city: string\n",
+            "Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "+- Join Inner, (cust_id#0 = cust_id#68)\n",
+            "   :- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "   +- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Optimized Logical Plan ==\n",
+            "Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "+- Join Inner, (cust_id#0 = cust_id#68)\n",
+            "   :- Filter isnotnull(cust_id#0)\n",
+            "   :  +- Relation [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] parquet\n",
+            "   +- Filter isnotnull(cust_id#68)\n",
+            "      +- Relation [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] parquet\n",
+            "\n",
+            "== Physical Plan ==\n",
+            "AdaptiveSparkPlan isFinalPlan=false\n",
+            "+- Project [cust_id#0, start_date#1, end_date#2, txn_id#3, date#4, year#5, month#6, day#7, expense_type#8, amt#9, city#10, name#69, age#70, gender#71, birthday#72, zip#73, city#74]\n",
+            "   +- SortMergeJoin [cust_id#0], [cust_id#68], Inner\n",
+            "      :- Sort [cust_id#0 ASC NULLS FIRST], false, 0\n",
+            "      :  +- Exchange hashpartitioning(cust_id#0, 200), ENSURE_REQUIREMENTS, [plan_id=239]\n",
+            "      :     +- Filter isnotnull(cust_id#0)\n",
+            "      :        +- FileScan parquet [cust_id#0,start_date#1,end_date#2,txn_id#3,date#4,year#5,month#6,day#7,expense_type#8,amt#9,city#10] Batched: true, DataFilters: [isnotnull(cust_id#0)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/content/drive/MyDrive/data/data_skew/transactions.parquet], PartitionFilters: [], PushedFilters: [IsNotNull(cust_id)], ReadSchema: struct<cust_id:string,start_date:string,end_date:string,txn_id:string,date:string,year:string,mon...\n",
+            "      +- Sort [cust_id#68 ASC NULLS FIRST], false, 0\n",
+            "         +- Exchange hashpartitioning(cust_id#68, 200), ENSURE_REQUIREMENTS, [plan_id=240]\n",
+            "            +- Filter isnotnull(cust_id#68)\n",
+            "               +- FileScan parquet [cust_id#68,name#69,age#70,gender#71,birthday#72,zip#73,city#74] Batched: true, DataFilters: [isnotnull(cust_id#68)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/content/drive/MyDrive/data/data_skew/customers.parquet], PartitionFilters: [], PushedFilters: [IsNotNull(cust_id)], ReadSchema: struct<cust_id:string,name:string,age:string,gender:string,birthday:string,zip:string,city:string>\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Analysis**\n",
+        "\n",
+        "This Spark physical plan describes an inner join between two Parquet datasets (transactions and customers) using the cust_id column, with a SortMergeJoin strategy:\n",
+        "\n",
+        "\n",
+        "*   FileScan parquet: Reads data from both Parquet files, filtering out rows where cust_id is null.\n",
+        "*  Exchange hashpartitioning: Both datasets are repartitioned by cust_id into 200 partitions to prepare for the join.\n",
+        "*   Sort: Each partition is sorted by cust_id to enable efficient merging.\n",
+        "*   SortMergeJoin: Performs the inner join by merging sorted partitions on cust_id.\n",
+        "*   Project: Selects and outputs columns from both datasets, including transaction and customer details.\n",
+        "\n",
+        "\n",
+        "**This plan is suitable for joining large datasets, as SortMergeJoin is optimized for distributed, partitioned, and sorted data. The filtering and partitioning steps ensure only valid and efficiently distributed data is joined.**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eU_HG7_v3Su9"
+      }
     },
     {
       "cell_type": "code",
