--- a/Shubham5_salting_aqe.ipynb
+++ b/Shubham5_salting_aqe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVVhplG/B33fC06r4E5f5Q",
+      "authorship_tag": "ABX9TyMw+yzo8LuRdcUnKTkgd7Vd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "import pyspark\n",
         "print(pyspark.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "id": "Wgg6Dl8U2-JN",
         "outputId": "3a38c7db-5912-4833-eeac-d03ba36d1aee"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
         "repartitioned_result_df = repartitioned_result.withColumn(\"partition_id\", spark_partition_id()).groupBy(\"partition_id\").agg(count(\"*\").alias(\"count\")).orderBy(\"partition_id\")\n",
         "repartitioned_result_df.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
         "print(\"Full partition distribution for repartitioned_result_df (ordered by count descending):\")\n",
         "repartitioned_result_df.orderBy(col(\"count\").desc()).show(50, truncate=False)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +525,7 @@
         "id": "FrGNeoy0-pPK",
         "outputId": "30b4cb46-380c-463f-d78d-b216edf15bb7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,6 +590,111 @@
         "**Final Partition Distribution Observation:**\n",
         "\n",
         "Despite the successful mitigation of skew during the join, the final `salted_result` DataFrame, when analyzed for its partition distribution, still showed all records in `partition_id=0`. This is expected behavior for a small result set. Spark's optimizer often coalesces the final output into a minimal number of partitions (potentially one) if it determines that doing so is efficient and doesn't hinder subsequent operations. The key success of salting is measured in the reduced execution time of the join itself, not necessarily in the final number of partitions of the aggregated result."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#AQE\n",
+        "\n",
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import monotonically_increasing_id\n",
+        "import time\n",
+        "\n",
+        "spark = SparkSession.builder \\\n",
+        "    .appName(\"SkewnessWithAQE\") \\\n",
+        "    .config(\"spark.sql.adaptive.enabled\", \"true\") \\\n",
+        "    .config(\"spark.sql.adaptive.skewJoin.enabled\", \"true\") \\\n",
+        "    .config(\"spark.sql.adaptive.skewJoin.skewedPartitionThresholdInBytes\", 64*1024*1024) \\\n",
+        "    .config(\"spark.sql.adaptive.skewJoin.skewedPartitionFactor\", 5) \\\n",
+        "    .getOrCreate()"
+      ],
+      "metadata": {
+        "id": "Bkr6jatDJvk9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Skewed dataset: id=1 dominates\n",
+        "# Skewed dataset: most rows have id = 1\n",
+        "data1 = [(1, \"AAPL\")] * 1_000_0 + [(i, f\"SYM{i}\") for i in range(2, 1000)]\n",
+        "data2 = [(1, \"BUY\")] * 1_000_0 + [(i, f\"ORD{i}\") for i in range(2, 1000)]\n",
+        "\n",
+        "df1 = spark.createDataFrame(data1, [\"id\", \"symbol\"])\n",
+        "df2 = spark.createDataFrame(data2, [\"id\", \"order_type\"])\n",
+        "\n",
+        "# Repartition the DataFrames for better distribution (e.g., 4 partitions)\n",
+        "repartitioned_df1 = df1.repartition(4, \"id\")\n",
+        "repartitioned_df2 = df2.repartition(4, \"id\")\n"
+      ],
+      "metadata": {
+        "id": "katwB_C1KAeV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Without AQE ---\n",
+        "spark.conf.set(\"spark.sql.adaptive.enabled\", \"false\")\n",
+        "start = time.time()\n",
+        "skewed_result = df1.join(df2, df1.id == df2.id, \"inner\")\n",
+        "skewed_count = skewed_result.count()\n",
+        "end = time.time()\n",
+        "print(\"Join without AQE:\", end - start)\n",
+        "\n",
+        "# --- With AQE ---\n",
+        "spark.conf.set(\"spark.sql.adaptive.enabled\", \"true\")\n",
+        "start = time.time()\n",
+        "aqe_result = df1.join(df2, df1.id == df2.id, \"inner\")\n",
+        "aqe_count = aqe_result.count()\n",
+        "end = time.time()\n",
+        "print(\"Join with AQE:\", end - start)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G24IToHwKagk",
+        "outputId": "5196a693-c3f0-4ac9-c30d-19a55460f7bf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Join without AQE: 8.609707593917847\n",
+            "Join with AQE: 4.289633274078369\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80dccf61"
+      },
+      "source": [
+        "### Adaptive Query Execution (AQE) Summary\n",
+        "\n",
+        "Adaptive Query Execution (AQE) is a powerful optimization feature in Apache Spark that improves query performance by making runtime adjustments to query plans based on actual runtime statistics. It dynamically re-optimizes query plans during execution, addressing common performance issues like data skew and inaccurate cardinality estimates.\n",
+        "\n",
+        "#### Key Benefits of AQE:\n",
+        "\n",
+        "*   **Dynamic Skew Join Handling**: AQE can detect skewed partitions during a shuffle hash join. It then automatically splits the skewed tasks into smaller sub-tasks, allowing the skewed data to be processed in parallel across multiple CPU cores. This prevents a single task from becoming a bottleneck and significantly improves overall performance, as demonstrated by the reduced join time in the notebook's example.\n",
+        "*   **Dynamic Coalescing of Shuffle Partitions**: AQE can combine small shuffle partitions into larger ones, reducing the overhead of many small tasks and improving I/O throughput.\n",
+        "*   **Dynamic Switching of Join Strategies**: It can convert a sort-merge join to a broadcast hash join if the runtime statistics indicate that one side of the join is small enough to be broadcast.\n",
+        "\n",
+        "#### How it works (relevant to skewed joins):\n",
+        "\n",
+        "When `spark.sql.adaptive.skewJoin.enabled` is set to `true`, AQE monitors the size of partitions after a shuffle. If it identifies a partition that is significantly larger than others (based on thresholds like `spark.sql.adaptive.skewJoin.skewedPartitionThresholdInBytes` and `spark.sql.adaptive.skewJoin.skewedPartitionFactor`), it applies optimizations. These typically involve splitting the skewed partition into smaller parts and replicating the corresponding non-skewed side of the join for each sub-task. This effectively tackles data skew without requiring manual techniques like repartitioning or salting.\n",
+        "\n",
+        "In this notebook, enabling AQE reduced the join time for the skewed dataset from **8.61 seconds** (without AQE) to **4.29 seconds** (with AQE), highlighting its effectiveness in optimizing performance for skewed operations."
       ]
     }
   ]
